docs(swagger): ajust controller anotations
